# orange-intelligence

./: Info.plist  README.md  app.py  config.py  functions.py  main.py  pyproject.toml  setup.py  utils.py
core/: controller.py  model.py
core/views/: floating_window.py
extensions/: variables.py
extensions/ollama/: example.py
